--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@swup/a11y-plugin": "^2.1.0",
+    "@swup/js-plugin": "^1.0.5",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
+    "datatables.net": "^1.13.1",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
     "fine-uploader": "^5.16.2",
+    "fs-extra": "^11.1.1",
     "html": "^1.0.0",
     "jquery": "^3.6.1",
     "mkdirp": "0.5.5",
@@ -25,7 +30,9 @@
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "node": "^17.2.0",
+    "parcel-bundler": "^1.12.5",
     "rimraf": "^3.0.2",
+    "swup": "^2.0.19",
     "uuid": "^8.3.2"
   }
 }
